# zig-vorne-m1000

./: .gitattributes  .gitignore  SERVICE.md  build.zig  build.zig.zon  gdbroot.sh  install-service.sh  line2_config.jsonc  multicast_vlc_status.lua  readme.md  uninstall-service.sh  zig-vorne-m1000.code-workspace  zig-vorne-m1000.service
reference/: Vorne M1000 charmap.xlsx  notes.txt  sniff.txt
src/: bluray.zig  clocks.zig  config.zig  frame_timer.zig  main.zig  mode.zig  process_mgmt.zig  protocol.zig  serial.zig  str_utils.zig  time.zig  vlc.zig
vlc/: README.md  install-vlc-extension.bat  install-vlc-interface.bat  multicast_vlc_status.lua  start-vlc-broadcaster.bat  start_vlc_status.bat
vlc/lua/: status_broadcaster.lua
vlc/server/: CMakeLists.txt  CMakePresets.json  vlc_dll_test.c  vlc_status_server.c
vlc/server/src/: http_server.c  http_server.h  network.c  network.h  status_monitor.c  status_monitor.h  ui.c  ui.h  utils.c  utils.h  vlc_player.c  vlc_player.h
